tests/snapshots/assets__check_file@unit-array.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/array.typ
---
#{
  (
    1,
  )
  (
    1,
    2,
    3,
  )
}
