tests/snapshots/assets__check_file@unit-array.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/array.typ
snapshot_kind: text
---
#{
  (1,)
  (1, 2, 3)
}
