tests/snapshots/assets__check_file@unit-chain-binary-0.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/chain/binary-0.typ
snapshot_kind: text
---
#{
  let f(x) = x
  f("Unsupported content type " + type(content) + "! " + "Provide your own `draw-node` implementation.")
}
