tests/snapshots/assets__check_file@unit-chain-binary.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/chain/binary.typ
snapshot_kind: text
---
#{
  let a = (
    1111111111111
      + 2222222222222
      + 3333333333333 / 2
      + 4444444444444
      + 5555555555555
      + 444444444
      - 6666666
      + 7777777
      - 9999999 / 10000000
      + 111111111111 * 333 / 222 * 44444 / 999 * 1111 / 44444 * 1111 / 44444 * 1111 / 44444
      - 222222222222
      + 333333333333
      - 444444444444
      + 555555555555
  )

  let b = (
    1111111111111
      + 2222222222222
      + 3333333333333 / 2
      + 4444444444444
      + 5555555555555
      + 444444444
      - 6666666
      + 7777777
      - 9999999 / 10000000
      + 111111111111 * 333 / 222 * 44444 / 999 * 1111 / 44444 * 1111 / 44444 * 1111 / 44444
      - 222222222222
      + 333333333333
      - 444444444444
      + 555555555555
  )
}

#{ let c = 1 + 2 * 3 == 4 + 5 and 6 < 7 }
#let c = 1 + 2 * 3 == 4 + 5 and 6 < 7
